# geoidep

./: .Rbuildignore  .gitignore  404.html  CRAN-SUBMISSION  DESCRIPTION  LICENSE  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  authors.html  authors.md  geoidep.Rproj  index.html  index.md  llms.txt  pkgdown.yml  pyproject.toml  search.json  sitemap.xml
.circleci/: config.yml
R/: config.R  get_data_sources.R  get_departaments.R  get_districts.R  get_early_warning.R  get_forest_fire_data.R  get_forest_loss_data.R  get_geobosque.R  get_hazard_data.R  get_hotspots_data.R  get_inaigem_data.R  get_mapbiomas_alert_images.R  get_mapbiomas_peru_alerta.R  get_mapbiomas_peru_fire.R  get_mapbiomas_peru_fire_legend.R  get_mapbiomas_peru_lulc.R  get_mapbiomas_peru_lulc_series.R  get_midagri_data.R  get_mtc_data.R  get_providers.R  get_provinces.R  get_senamhi.R  get_sernanp_data.R  get_sigrid_data.R  scale_fill_mapbiomas_peru_d.R  scale_fill_mapbiomas_peru_fire_d.R  scale_fill_mapbiomas_peru_lulc_d.R  sysdata.rda  utils.R  zzz.R
articles/: article.html  geoidep.html  geoidep.md  index.html  index.md
docs/: 404.html  LICENSE.html  authors.html  extra.css  index.html  pkgdown.yml  search.json  sitemap.xml
man/: as_data_time.Rd  extract_meteorological_table.Rd  geoidep-package.Rd  get_data.Rd  get_data_sources.Rd  get_departaments.Rd  get_districts.Rd  get_early_warning.Rd  get_early_warning_link.Rd  get_fores_fire_link.Rd  get_forest_fire_data.Rd  get_forest_fire_link.Rd  get_forest_loss_data.Rd  get_geobosque_data.Rd  get_geobosque_link.Rd  get_hazard_data.Rd  get_hazard_link.Rd  get_heat_spot_link.Rd  get_hotspots_data.Rd  get_inaigem_data.Rd  get_inaigem_link.Rd  get_inei_link.Rd  get_mapbiomas_alert_images.Rd  get_mapbiomas_peru_alerta.Rd  get_mapbiomas_peru_fire.Rd  get_mapbiomas_peru_fire_legend.Rd  get_mapbiomas_peru_fire_products.Rd  get_mapbiomas_peru_lulc.Rd  get_mapbiomas_peru_lulc_series.Rd  get_meteorological_alerts.Rd  get_midagri_data.Rd  get_midagri_link.Rd  get_mtc_data.Rd  get_mtc_link.Rd  (+17 more)
(+144 files in other folders)
