[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "geoidep"
version = "0.2.0"
description = "Download Peruvian geospatial data from the Spatial Data Infrastructure (IDEP) — Python port of Antony Barja's R `geoidep` package."
readme = "README.md"
long_description_content_type = "text/markdown"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "Port Python de geoidep" }
]
keywords = ["peru", "spatial", "gis", "cartography", "idep", "geobosque", "inei", "sernanp", "serfor", "mapbiomas"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
  "requests>=2.28",
  "pandas>=2.0",
  "geopandas>=0.14",
  "shapely>=2.0",
  "tqdm>=4.65",
  "rarfile>=4.1",         # extracción de los .rar de INEI
  "beautifulsoup4>=4.12",  # scraping de SENAMHI
  "matplotlib>=3.8",       # visualización + paletas
]

[project.optional-dependencies]
mapbiomas = [
  "rioxarray>=0.15",      # lectura perezosa de COGs vía GDAL /vsicurl/
  "rasterio>=1.3",
  "xarray>=2024.1",
]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.urls]
Homepage = "https://github.com/ambarja/geoidep"
"Original R package" = "https://geografo.pe/geoidep/"
Issues = "https://github.com/ambarja/geoidep/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/geoidep"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
